--- a/documents/css/style.css
+++ b/documents/css/style.css
@@ -115,7 +115,23 @@ body{
     transform: translateX(-100%);
 }
 
+.content{
+    background: linear-gradient(#27b027 20%, #000000 90%);
+    width: calc(100% - 20px);
+    height: calc(100vh - 20px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px 10px;
+    border-radius: 10px;
+  
+}
+
 @media screen and (max-width:901px) {
+    .container{
+        display: flex;
+        flex-wrap: nowrap;
+    }
     .menu{
         width: 150px;
         height:calc(100vh - 20px);
