--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,11 +20,13 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    top: 0;
     padding: 0px 20px;
     margin-left: 10px;
     margin-right: 10px;
     border-radius: 0px 0px 10px 10px;
     transition-duration: 0.8s;
+    position: fixed;
     
 }
 
@@ -116,11 +118,12 @@ body{
 .content{
     background: linear-gradient(#27b027 20%, #000000 90%);
     width: calc(100% - 20px);
-    height: 100%;
+    height: 100vh;
     margin: 10px 10px;
+    margin-top: 90px;
     border-radius: 10px;
     padding: 50px;
-  
+    overflow-y: auto;
 }
 
 .content h1{
@@ -241,6 +244,11 @@ body{
     .container{
         width: 100%;
         
+    }
+
+    .content{
+        margin-top: 0;
+        margin-left: 170px;
     }
 
     .content .frames{
