Chamando o front pelo localhost

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,15 +8,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SpotifyTeam</title>
-        <link rel="stylesheet" href="../../public/css/style.css">
-        <link rel="icon" href="../public/images/spotify.png" type="image/x-icon">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="icon" href="images/spotify.png" type="image/x-icon">
     </head>
     <body>
     
             <div class="container">
                 <div class="menu">
                     <div class="logo">
-                        <img src="../public/images/spotify.png" alt="">
+                        <img src="/images/spotify.png" alt="">
                         <span>SpotifyTeam</span>
                     </div>
                     
@@ -46,45 +46,46 @@
                     <h1 id="title">Os mais tocadas do gênero <span id="genreLabel"></span></h1>
     
                     <div class="frames">
-<<<<<<< HEADsta
                         <div class="frame">
-                            <img src="../public/images/photoMusic.jpg" alt="">
-                            <button><img src="../public/images/botao-play (1).png" alt=""></button>
+                            <img src="images/photoMusic.jpg" alt="">
+                            <button><img src="images/botao-play (1).png" alt=""></button>
                             <p id="MPName">Playlist</p>
                         </div>
     
                         <div class="frame">
-                            <img src="../public/images/photoMusic.jpg" alt="">
-                            <button><img src="../public/images/botao-play (1).png" alt=""></button>
+                            <img src="images/photoMusic.jpg" alt="">
+                            <button><img src="images/botao-play (1).png" alt=""></button>
                             <p id="MPName">Playlist</p>
                         </div>
     
                         <div class="frame">
-                            <img src="../public/images/photoMusic.jpg" alt="">
-                            <button><img src="../public/images/botao-play (1).png" alt=""></button>
+                            <img src="images/photoMusic.jpg" alt="">
+                            <button><img src="images/botao-play (1).png" alt=""></button>
                             <p id="MPName">Playlist</p>
                         </div>
     
                         <div class="frame">
-                            <img src="../public/images/photoMusic.jpg" alt="">
-                            <button><img src="../public/images/botao-play (1).png" alt=""></button>
+                            <img src="images/photoMusic.jpg" alt="">
+                            <button><img src="images/botao-play (1).png" alt=""></button>
                             <p id="MPName">Playlist</p>
                         </div>
     
                         <div class="frame">
-                            <img src="../public/images/photoMusic.jpg" alt="">
-                            <button><img src="../public/images/botao-play (1).png" alt=""></button>
+                            <img src="images/photoMusic.jpg" alt="">
+                            <button><img src="images/botao-play (1).png" alt=""></button>
                             <p id="MPName">Playlist</p>
                         </div>
     
                         <div class="frame">
-                            <img src="../public/images/photoMusic.jpg" alt="">
-                            <button><img src="../public/images/botao-play (1).png" alt=""></button>
-=======
+                            <img src="images/photoMusic.jpg" alt="">
+                            <button><img src="images/botao-play (1).png" alt=""></button>
+                            <p id="MPName">Playlist</p>
+                        </div>
+
                         <div class="frame" id="frame">
-                            <img src="public/images/photoMusic.jpg" alt="">
-                            <button><img src="public/images/botao-play (1).png" alt=""></button>
->>>>>>> 775e2d503dbb706ee0aefd24b0ed20a4444a2ba1
+                            <img src="images/photoMusic.jpg" alt="">
+                            <button><img src="images/botao-play (1).png" alt=""></button>
+
                             <p id="MPName">Playlist</p>
 
                         </div>
