--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -97,6 +97,6 @@
             </div>
                
 
-    <script src="script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
