Adicionando os frames a cada artista ou música

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -45,50 +45,8 @@
                 <div class="content">
                     <h1 id="title">Os mais tocadas do gênero <span id="genreLabel"></span></h1>
     
-                    <div class="frames">
-                        <div class="frame">
-                            <img src="images/photoMusic.jpg" alt="">
-                            <button><img src="images/botao-play (1).png" alt=""></button>
-                            <p id="MPName">Playlist</p>
-                        </div>
-    
-                        <div class="frame">
-                            <img src="images/photoMusic.jpg" alt="">
-                            <button><img src="images/botao-play (1).png" alt=""></button>
-                            <p id="MPName">Playlist</p>
-                        </div>
-    
-                        <div class="frame">
-                            <img src="images/photoMusic.jpg" alt="">
-                            <button><img src="images/botao-play (1).png" alt=""></button>
-                            <p id="MPName">Playlist</p>
-                        </div>
-    
-                        <div class="frame">
-                            <img src="images/photoMusic.jpg" alt="">
-                            <button><img src="images/botao-play (1).png" alt=""></button>
-                            <p id="MPName">Playlist</p>
-                        </div>
-    
-                        <div class="frame">
-                            <img src="images/photoMusic.jpg" alt="">
-                            <button><img src="images/botao-play (1).png" alt=""></button>
-                            <p id="MPName">Playlist</p>
-                        </div>
-    
-                        <div class="frame">
-                            <img src="images/photoMusic.jpg" alt="">
-                            <button><img src="images/botao-play (1).png" alt=""></button>
-                            <p id="MPName">Playlist</p>
-                        </div>
-
-                        <div class="frame" id="frame">
-                            <img src="images/photoMusic.jpg" alt="">
-                            <button><img src="images/botao-play (1).png" alt=""></button>
-
-                            <p id="MPName">Playlist</p>
-
-                        </div>
+                    <div class="frames" id="frames">
+                    
                     </div>
                     
     
