--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -136,7 +136,7 @@ h4{
 
 .content .frames{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
     align-items: center;
 }
@@ -149,7 +149,7 @@ h4{
     color: white;
     text-align: center;
     padding: 20px;
-    margin: 20px 10px;
+    /* margin: 20px 10px; */
     
    
 }
@@ -267,6 +267,10 @@ h4{
 
 
 iframe {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1em;
     /* Remove a borda */
     border: none;
   
