Alterando o estilo e Adicionando o  README

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -149,9 +149,37 @@ h4{
     color: white;
     text-align: center;
     padding: 20px;
-    /* margin: 20px 10px; */
+    margin: 20px 10px;
     
-   
+}
+
+iframe{
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+  
+iframe:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 12px 40px 0 rgba(0, 0, 0, 0.19);
+  }
+  
+
+
+iframe p {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    cursor: pointer;
+    margin-top: 0px; 
 }
 
 
@@ -266,49 +294,4 @@ h4{
 
 
 
-iframe {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 1em;
-    /* Remove a borda */
-    border: none;
   
-    /* Arredonda os cantos */
-    border-radius: 10px;
-  
-    /* Remove a barra de rolagem */
-    overflow: hidden;
-  
-    /* Adiciona sombra para dar profundidade */
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  
-    /* Transição suave para hover */
-    transition: all 0.3s ease-in-out;
-  }
-  
-  /* Aumenta um pouco o tamanho e a sombra no hover */
-  iframe:hover {
-    transform: scale(1.05);
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 12px 40px 0 rgba(0, 0, 0, 0.19);
-  }
-  
-  .frame {
-    /* ... Seus estilos existentes ... */
-
-    /* Adiciona estilos para centralizar o conteúdo dentro da div */
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /* Centraliza verticalmente */
-    align-items: center; /* Centraliza horizontalmente */
-    text-align: center; /* Centraliza o texto horizontalmente */
-}
-
-/* Adiciona estilos para o elemento <p> dentro da .frame */
-.frame p {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    cursor: pointer;
-    margin-top: 0px; /* Adiciona espaçamento superior */
-}
