--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -43,7 +43,7 @@
                
     
                 <div class="content">
-                    <h1 id="title">Os mais tocadas do gênero <span id="genreLabel"></span></h1>
+                    <h1 id="title">Veja os artistas ou escute as músicas mais tops do gênero escolhido ♪♫♪♫♪♫ </h1>
     
                     <div class="frames" id="frames">
                     
